                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-05-2005 added: Ability to enable autosync option for mplayer in settings. (Use Smoothed A/V Sync)
 - 25-05-2005 added: option to disable ftpserver fatx limits
 - 25-05-2005 fixed: ftpserver could fail to accept directory names containing "."
 - 25-05-2005 changed: ftpserver now truncates directory names aswell
 - 24-05-2005 fixed: TimeServer Request was brocken [GeminiServer]
 - 24-05-2005 updated: German language file
 - 24-05-2005 updated: Italian language file (Thnx to kotix)
 - 24-05-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 24-05-2005 updated: Finnish language file (Thnx to jutski)
 - 24-05-2005 updated: Norwegian language file (Thnx to vnm)
 - 23-05-2005 fixed: Date&Time: TimeZone/Daylight Detection was wrong! Fixed!(Supported Range GMT-12 - GMT+12) [GeminiServer]
 - 23-05-2005 fixed: Date&Time: Selectable Minute Range was from 0-60! Now 0-59! [GeminiServer]
 - 23-05-2005 changed: Info on visualisation fades in/out on Shoutcast track change as well as normal track change.
 - 23-05-2005 removed: Unusued code in VideoOverlay and MusicOverlay.
 - 23-05-2005 fixed: Better seek bar behaviour at end of media.
 - 23-05-2005 added: PAPlayer v2.
 - 23-05-2005 changed: Cleaned up video renderers + merged the interface for mplayer + dvdplayer.
 - 23-05-2005 changed: removed the Swap Month and Day from Look&Feel and add To Date & Time.[GeminiServer]
 - 23-05-2005 changed: removed the Swap 12HourClock from Look&Feel and add To Date & Time.[GeminiServer]
 - 23-05-2005 changed: removed the Internet Time from the Network place and add to Date & Time.[GeminiServer]